Updated Enedok's code which sometimes caused concurrent modifications

--- a/DiscoSheep+/plugin.yml
+++ b/DiscoSheep+/plugin.yml
@@ -1,5 +1,5 @@
 name: DiscoSheepPlus
-version: 1.0
+version: 1.1
 description: Fluffy mammal parties for Bukkit servers.
 author: HappyPikachu
 website: http://dev.bukkit.org/server-mods/discosheepplus/
@@ -10,4 +10,4 @@ commands:
   ds:
     aliases: [disco, discoparty, discosheep]
     description: Displays information about DiscoSheep+.
-    usage: /<command>
+    usage: /<command> [args]
